# content-hub

./: CMakeLists.txt  README  contenthub.qmlproject  libcontent-hub-glib.pc.in  libcontent-hub.pc.in  snapcraft.yaml
cmake/: FindGtest.cmake  GSettings.cmake  Translations.cmake
debian/: changelog  content-hub-schema-paths.sh  content-hub-testability.install  content-hub-tools.install  content-hub.install  content-hub.migrations  control  copyright  libcontent-hub-dev.install  libcontent-hub-doc.install  libcontent-hub-glib-dev.install  libcontent-hub-glib0.install  libcontent-hub0.install  qtdeclarative5-ubuntu-content0.1.install  qtdeclarative5-ubuntu-content0.1.lintian-overrides  qtdeclarative5-ubuntu-content1.install  rules
debian/apparmor/: content-hub-testability  content-hub-trust-prompt
debian/tests/: aa-check  control  url-dispatcher
doc/: CMakeLists.txt  Doxyfile.in  Mainpage.md
doc/qml/: CMakeLists.txt  ubuntu-content-hub.qdocconf.in
doc/qml/pages/: mainpage.qdoc  moduledef.qdoc
examples/: CMakeLists.txt
examples/export-qml/: app-exporter.qml  export.qml
examples/exporter/: CMakeLists.txt  example.cpp  example.h  exampleexporter.cpp  exampleexporter.h  exporter.cpp
examples/import-qml/: import.qml
examples/importer/: CMakeLists.txt  (+5 more)
examples/pasteboard/: CMakeLists.txt  copy.cpp  paste.cpp
import/: CMakeLists.txt  contenthub.cpp  contenttransfer.h
import/Ubuntu/Content/: CMakeLists.txt  ContentExportChrome.qml  ContentImportHint.qml  ContentPageHeader.qml  ContentPeerPicker.qdoc  ContentPeerPicker.qml  ContentPeerPicker10.qml  ContentPeerPicker11.qml  ContentPeerPicker13.qml  ContentTransferHint.qml  ResponsiveGridView.qml  contenthandler.cpp  contenthandler.h  contenthub.cpp  contenthub.h  contenthubplugin.cpp  contenthubplugin.h  contenticonprovider.cpp  contenticonprovider.h  contentitem.cpp  contentitem.h  contentpeer.cpp  contentpeer.h  contentpeermodel.cpp  contentpeermodel.h  contentscope.cpp  contentscope.h  contentstore.cpp  contentstore.h  contenttransfer.cpp  contenttransfer.h  contenttype.cpp  contenttype.h  mir-helper.cpp  qmldir  qmlimportexporthandler.cpp  qmlimportexporthandler.h  ucurihandler.cpp  ucurihandler.h
po/: CMakeLists.txt  POTFILES.in  aa.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  content-hub.pot  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  ga.po  gd.po  gl.po  he.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  (+37 more)
src/: CMakeLists.txt
src/com/ubuntu/content/: CMakeLists.txt  common.h  debug.cpp  debug.h  handler.cpp  hub.cpp  import_export_handler.cpp  item.cpp  paste.cpp  paste_p.h  peer.cpp  peer_registry.h  service.cpp  service.h  share_handler.cpp  store.cpp  transfer.cpp  transfer_p.h  type.cpp  utils.cpp
src/com/ubuntu/content/detail/: app_manager.cpp  app_manager.h  com.ubuntu.content.Handler.xml  com.ubuntu.content.ImportExportHandler.xml  com.ubuntu.content.Paste.xml  com.ubuntu.content.Service.xml  com.ubuntu.content.ShareHandler.xml  com.ubuntu.content.Transfer.xml  handler.cpp  handler.h  i18n.cpp  i18n.h  import_export_handler.cpp  import_export_handler.h  mir-helper.cpp  mir-helper.h  paste.cpp  paste.h  peer_registry.h  service.cpp  service.h  share_handler.cpp  share_handler.h  transfer.cpp  transfer.h
src/com/ubuntu/content/helper/: CMakeLists.txt
src/com/ubuntu/content/service/: CMakeLists.txt  com.ubuntu.content.dbus.Service.service  com.ubuntu.content.hub.gschema.xml  content-hub-peer-hook-wrapper.in  content-hub-peer.hook.in  content-hub.hook.in  content-hub.service  helper.cpp  hook.cpp  hook.h  main.cpp  registry-updater.cpp  registry-updater.h  registry.cpp  registry.h  serviceregistry.cpp  serviceregistry.h
src/helper/: CMakeLists.txt  exec-tool.c  exec-tool.cpp  mir-connection-demangler.c
tests/: CMakeLists.txt
tests/acceptance-tests/: CMakeLists.txt  app_hub_communication_default_peer.cpp  app_hub_communication_default_source.cpp  app_hub_communication_handler.cpp  app_hub_communication_known_peers.cpp  app_hub_communication_known_sources.cpp  app_hub_communication_paste.cpp  app_hub_communication_share_handler.cpp  app_hub_communication_stores.cpp  app_hub_communication_transfer.cpp  app_manager_mock.h  bad.json  glib_test.c  glib_test.cpp  good.json  mimedata_test.cpp  test_harness.h  test_hook.cpp  test_registry_updater.cpp  test_types.cpp  test_utils.cpp
tests/peers/: CMakeLists.txt
tests/peers/data/: CMakeLists.txt  Joker.vcf  Stark,_Tony.vcf
tests/peers/exporter/: CMakeLists.txt  autoexporter.cpp  autoexporter.h  content-hub-test-exporter.desktop  content-hub-test-exporter.json  exporter.cpp
tests/peers/importer/: CMakeLists.txt  autoimporter.cpp  autoimporter.h  content-hub-test-importer.desktop  content-hub-test-importer.json  importer.cpp
tests/peers/sharer/: CMakeLists.txt  autosharer.cpp  autosharer.h  content-hub-test-sharer.desktop  content-hub-test-sharer.json  sharer.cpp
tests/qml-tests/: CMakeLists.txt  tst_ContentHub.qml  tst_QmlTests.cpp
tools/: CMakeLists.txt
tools/aa-check/: CMakeLists.txt  main.cpp
tools/clipboard/: CMakeLists.txt  ClipboardItemDelegate.qml  PasteOptionsPage.qml  PreviewImagePage.qml  PreviewTextPage.qml  clipboard-app.qml  clipboardapplication.cpp  clipboardapplication.h  config.h.in  content-hub-clipboard.desktop  main.cpp  main.qml  paste-data-deleted-model.cpp  paste-data-deleted-model.h  paste-data-filter-model.cpp  paste-data-filter-model.h  paste-data-model.cpp  paste-data-model.h  paste-data-provider.cpp  paste-data-provider.h  paste-image-provider.cpp  paste-image-provider.h  qml.qrc
tools/peer-picker/: CMakeLists.txt  PeerPicker.qml  ResponsiveGridView.qml  content-hub-peer-picker.desktop  main.cpp  main.qml  peer-picker.cpp  peer-picker.h  qml.qrc
tools/qicon_helper/: CMakeLists.txt  main.cpp
tools/send/: CMakeLists.txt  autoexporter.cpp  autoexporter.h  content-hub-send.desktop  content-hub-send.url-dispatcher  exporter.cpp
utils/: CMakeLists.txt  helper-exec-tool.in  helper-exec-tool.sh
(+24 files in other folders)
